@@ -1,3 +1,15 @@
+Wed Dec  1 11:55:39 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>
+
+        * connectors/dds4ccm/tests/MultipleTemp/Sender/MultipleTemp_Sender_exec.cpp:
+        * connectors/dds4ccm/tests/MultipleTemp/Sender/MultipleTemp_Sender.idl:
+        * connectors/dds4ccm/tests/MultipleTemp/Sender/MultipleTemp_Sender_exec.h:
+        * connectors/dds4ccm/tests/MultipleTemp/Receiver/MultipleTemp_Receiver_exec.h:
+        * connectors/dds4ccm/tests/MultipleTemp/Receiver/MultipleTemp_Receiver_exec.cpp:
+        * connectors/dds4ccm/tests/MultipleTemp/Receiver/MultipleTemp_Receiver.idl:
+        * connectors/dds4ccm/tests/MultipleTemp/Connector/MultipleTemp_Connector.idl:
+       Remove trailing spaces and tabs.
+
+
 Wed Dec  1 10:18:26 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * MPC/config/ciao_extension_container.mpb:
